--- a/install_apache.yml
+++ b/install_apache.yml
@@ -6,13 +6,33 @@
   - name: update repository index
     ansible.builtin.apt:
       update_cache: yes
+    when: ansible_distribution == "Ubuntu"
 
   - name: install apache2 package
     ansible.builtin.apt:
       name: apache2
       state: latest
-
+    when: ansible_distribution == "Ubuntu"
+  
   - name: install support for php
     ansible.builtin.apt:
       name: libapache2-mod-php
       state: latest
+    when: ansible_distribution == "Ubuntu"
+
+  - name: update repository index
+    ansible.builtin.yum:
+      update_cache: yes
+    when: ansible_distribution == "CentOS"
+
+  - name: install httpd package
+    ansible.builtin.yum:
+      name: httpd
+      state: latest
+    when: ansible_distribution == "CentOS"
+  
+  - name: install support for php
+    ansible.builtin.yum:
+      name: php
+      state: latest
+    when: ansible_distribution == "CentOS"
