--- a/install_apache.yml
+++ b/install_apache.yml
@@ -3,36 +3,11 @@
   become: true
   tasks: 
 
-  - name: update repository index
-    ansible.builtin.apt:
-      update_cache: yes
-    when: ansible_distribution == "Ubuntu"
-
   - name: install apache2 package
-    ansible.builtin.apt:
-      name: apache2
+    ansible.builtin.package:
+      name: 
+        - "{{ apache_package }}"
+        - "{{ php_package }}"
       state: latest
-    when: ansible_distribution == "Ubuntu"
+      update_cache: yes  
   
-  - name: install support for php
-    ansible.builtin.apt:
-      name: libapache2-mod-php
-      state: latest
-    when: ansible_distribution == "Ubuntu"
-
-  - name: update repository index
-    ansible.builtin.yum:
-      update_cache: yes
-    when: ansible_distribution == "CentOS"
-
-  - name: install httpd package
-    ansible.builtin.yum:
-      name: httpd
-      state: latest
-    when: ansible_distribution == "CentOS"
-  
-  - name: install support for php
-    ansible.builtin.yum:
-      name: php
-      state: latest
-    when: ansible_distribution == "CentOS"
